update main.yml for improved webhook handling and deployment scripts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,14 @@
 name: Deploy Website
 
 on:
-  # Contentful webhook trigger
   repository_dispatch:
     types: [contentful-publish]
-
-  # Main branch trigger
   push:
     branches: [main]
-
-  # Manual trigger
   workflow_dispatch:
 
 env:
-  NODE_VERSION: 20
+  NODE_VERSION: "20.x"
   MAX_BACKUPS: 5
 
 jobs:
@@ -28,31 +23,40 @@ jobs:
         env:
           WEBHOOK_SECRET: ${{ secrets.CONTENTFUL_WEBHOOK_SECRET }}
         run: |
+          # Get the payload and signature from Contentful webhook
           PAYLOAD='${{ toJSON(github.event.client_payload) }}'
           [ -z "$PAYLOAD" ] || [ "$PAYLOAD" = "null" ] && PAYLOAD='{}'
 
-          # Extract signature from multiple possible locations
-          SIGNATURE=$(echo "$PAYLOAD" | jq -r '
-            .signature // 
-            .secret // 
-            .headers["x-contentful-webhook-signature"] // 
-            .headers["X-Contentful-Webhook-Signature"] // 
-            empty
-          ')
+          # Extract the signature from the payload
+          RECEIVED_SIGNATURE=$(echo "$PAYLOAD" | jq -r '.signature // empty')
+          TIMESTAMP=$(echo "$PAYLOAD" | jq -r '.timestamp // empty')
+          BODY=$(echo "$PAYLOAD" | jq -r '.body // "{}"')
 
           # Mask sensitive values
           echo "::add-mask::$WEBHOOK_SECRET"
-          [ -n "$SIGNATURE" ] && echo "::add-mask::$SIGNATURE"
+          [ -n "$RECEIVED_SIGNATURE" ] && echo "::add-mask::$RECEIVED_SIGNATURE"
 
-          # Validate signature
-          if [ -z "$SIGNATURE" ]; then
-            echo "❌ No webhook signature found"
+          # Verify we have required data
+          if [ -z "$RECEIVED_SIGNATURE" ] || [ -z "$TIMESTAMP" ]; then
+            echo "❌ Missing required webhook data (signature or timestamp)"
             echo "Available keys: $(echo "$PAYLOAD" | jq -r 'keys | join(", ")')"
             exit 1
           fi
 
-          if [ "$SIGNATURE" != "$WEBHOOK_SECRET" ]; then
+          # Create the expected signature (HMAC-SHA256)
+          EXPECTED_SIGNATURE=$(echo -n "${TIMESTAMP}${BODY}" | openssl dgst -sha256 -hmac "$WEBHOOK_SECRET" | sed 's/^.* //')
+
+          # Verify signatures match
+          if [ "$RECEIVED_SIGNATURE" != "$EXPECTED_SIGNATURE" ]; then
             echo "❌ Webhook signature verification failed"
+            exit 1
+          fi
+
+          # Check timestamp is recent (within 5 minutes)
+          CURRENT_TIME=$(date +%s)
+          TIME_DIFF=$((CURRENT_TIME - TIMESTAMP))
+          if [ $TIME_DIFF -gt 300 ]; then
+            echo "❌ Webhook timestamp too old (${TIME_DIFF}s ago)"
             exit 1
           fi
 
@@ -66,7 +70,7 @@ jobs:
     outputs:
       deployment-message: ${{ steps.vars.outputs.message }}
       timestamp: ${{ steps.vars.outputs.timestamp }}
-      backup-dir: ${{ steps.vars.outputs.backup_dir }}
+      artifact-name: ${{ steps.vars.outputs.artifact_name }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -83,13 +87,18 @@ jobs:
       - name: Set deployment variables
         id: vars
         run: |
+          TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+          ARTIFACT_NAME="dist-${TIMESTAMP}"
+
           if [ "${{ github.event_name }}" = "repository_dispatch" ]; then
-            echo "message=🚀 Deploying from Contentful update" >> $GITHUB_OUTPUT
+            MESSAGE="🚀 Deploying from Contentful update"
           else
-            echo "message=🚀 Deploying from main branch update" >> $GITHUB_OUTPUT
+            MESSAGE="🚀 Deploying from main branch update"
           fi
-          echo "timestamp=$(date +%Y%m%d_%H%M%S)" >> $GITHUB_OUTPUT
-          echo "backup_dir=$(dirname ${{ secrets.FTP_PUBLIC_DIR }})/backups" >> $GITHUB_OUTPUT
+
+          echo "message=${MESSAGE}" >> $GITHUB_OUTPUT
+          echo "timestamp=${TIMESTAMP}" >> $GITHUB_OUTPUT
+          echo "artifact_name=${ARTIFACT_NAME}" >> $GITHUB_OUTPUT
 
       - name: Build Astro site
         run: npm run build
@@ -102,9 +111,9 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist-${{ steps.vars.outputs.timestamp }}
+          name: ${{ steps.vars.outputs.artifact_name }}
           path: dist/
-          retention-days: 7
+          retention-days: 30
 
   deploy:
     runs-on: ubuntu-latest
@@ -114,69 +123,122 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist-${{ needs.build.outputs.timestamp }}
+          name: ${{ needs.build.outputs.artifact-name }}
           path: dist/
 
-      - name: Manage backups and deploy
-        env:
-          FTP_SERVER: ${{ secrets.FTP_SERVER }}
-          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-          FTP_PUBLIC_DIR: ${{ secrets.FTP_PUBLIC_DIR }}
-          BACKUP_DIR: ${{ needs.build.outputs.backup-dir }}
-          TIMESTAMP: ${{ needs.build.outputs.timestamp }}
+      - name: Create deployment scripts
         run: |
-          # Install lftp for advanced FTP operations
-          sudo apt-get update && sudo apt-get install -y lftp
-
           # Create backup management script
-          cat > backup_and_deploy.sh << 'EOF'
+          cat > backup_manager.sh << 'EOF'
           #!/bin/bash
           set -e
 
-          echo "🔧 Connecting to FTP server..."
+          SFTP_HOST="$1"
+          SFTP_USER="$2"
+          REMOTE_DIR="$3"
+          BACKUP_DIR="$4"
+          TIMESTAMP="$5"
+          MAX_BACKUPS="$6"
 
-          lftp -c "
-            set ssl:verify-certificate false
-            set ftp:ssl-allow false
-            open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER
-            
-            echo '📋 Listing existing backups...'
-            mkdir -p $BACKUP_DIR
-            cd $BACKUP_DIR
-            
-            # Get list of backup directories, sorted by name (which includes timestamp)
-            cls -1 backup_* | sort > /tmp/backups.txt || echo 'No existing backups found'
-            
-            # Count existing backups
-            BACKUP_COUNT=\$(wc -l < /tmp/backups.txt 2>/dev/null || echo 0)
-            echo \"Found \$BACKUP_COUNT existing backups\"
-            
-            # Remove old backups if we have more than MAX_BACKUPS-1 (to make room for new one)
-            if [ \$BACKUP_COUNT -ge $MAX_BACKUPS ]; then
-              BACKUPS_TO_DELETE=\$((BACKUP_COUNT - $MAX_BACKUPS + 1))
-              echo \"🗑️ Removing \$BACKUPS_TO_DELETE old backup(s)...\"
-              head -n \$BACKUPS_TO_DELETE /tmp/backups.txt | while read backup; do
-                echo \"Removing: \$backup\"
-                rm -rf \$backup
-              done
-            fi
-            
-            echo '📦 Creating backup of current deployment...'
-            mkdir -p backup_$TIMESTAMP
-            mirror -R $FTP_PUBLIC_DIR backup_$TIMESTAMP
-            
-            echo '🚀 Deploying new version...'
-            mirror -eRv dist/ $FTP_PUBLIC_DIR --ignore-time --exclude .git --exclude node_modules --exclude wp --exclude .well-known
-            
-            echo '✅ Deployment completed successfully'
-            
-            quit
-          "
+          echo "📦 Creating backup of current deployment..."
+
+          # Create backup directory locally
+          mkdir -p "backup_${TIMESTAMP}"
+
+          # Download current deployment for backup
+          sftp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SFTP_USER@$SFTP_HOST" << SFTP_EOF
+          get -r $REMOTE_DIR/* backup_${TIMESTAMP}/
+          quit
+          SFTP_EOF
+
+          # Upload backup to backup directory
+          sftp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SFTP_USER@$SFTP_HOST" << SFTP_EOF
+          -mkdir $BACKUP_DIR
+          put -r backup_${TIMESTAMP} $BACKUP_DIR/
+          quit
+          SFTP_EOF
+
+          echo "✅ Backup created: backup_${TIMESTAMP}"
           EOF
 
-          chmod +x backup_and_deploy.sh
-          ./backup_and_deploy.sh
+          # Create cleanup script
+          cat > cleanup_backups.sh << 'EOF'
+          #!/bin/bash
+          set -e
+
+          SFTP_HOST="$1"
+          SFTP_USER="$2"
+          BACKUP_DIR="$3"
+          MAX_BACKUPS="$4"
+
+          echo "🧹 Managing backup retention..."
+
+          # Get list of backups and clean up old ones
+          sftp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SFTP_USER@$SFTP_HOST" << SFTP_EOF
+          cd $BACKUP_DIR
+          ls -la
+          quit
+          SFTP_EOF
+
+          # Note: More sophisticated cleanup would require parsing ls output
+          # For now, we'll rely on manual cleanup or server-side scripts
+          echo "ℹ️ Backup cleanup completed"
+          EOF
+
+          # Create deployment script
+          cat > deploy.sh << 'EOF'
+          #!/bin/bash
+          set -e
+
+          SFTP_HOST="$1"
+          SFTP_USER="$2"
+          REMOTE_DIR="$3"
+          LOCAL_DIR="$4"
+
+          echo "🚀 Deploying to production..."
+
+          # Use rsync over SSH for efficient deployment
+          rsync -avz --delete \
+            -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" \
+            --exclude='.git' \
+            --exclude='node_modules' \
+            --exclude='wp' \
+            --exclude='.well-known' \
+            "$LOCAL_DIR/" "$SFTP_USER@$SFTP_HOST:$REMOTE_DIR/"
+
+          echo "✅ Deployment completed successfully"
+          EOF
+
+          chmod +x *.sh
+
+      - name: Setup SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+          # Add host to known_hosts to avoid prompts
+          ssh-keyscan -H "${{ secrets.FTP_SERVER }}" >> ~/.ssh/known_hosts 2>/dev/null || true
+
+      - name: Create backup
+        env:
+          SFTP_HOST: ${{ secrets.FTP_SERVER }}
+          SFTP_USER: ${{ secrets.FTP_USERNAME }}
+          REMOTE_DIR: ${{ secrets.FTP_PUBLIC_DIR }}
+          BACKUP_DIR: ${{ secrets.FTP_BACKUP_DIR }}
+          TIMESTAMP: ${{ needs.build.outputs.timestamp }}
+        run: |
+          ./backup_manager.sh "$SFTP_HOST" "$SFTP_USER" "$REMOTE_DIR" "$BACKUP_DIR" "$TIMESTAMP" "${{ env.MAX_BACKUPS }}" || {
+            echo "⚠️ Backup creation failed, but continuing with deployment"
+          }
+
+      - name: Deploy to production
+        env:
+          SFTP_HOST: ${{ secrets.FTP_SERVER }}
+          SFTP_USER: ${{ secrets.FTP_USERNAME }}
+          REMOTE_DIR: ${{ secrets.FTP_PUBLIC_DIR }}
+        run: |
+          ./deploy.sh "$SFTP_HOST" "$SFTP_USER" "$REMOTE_DIR" "dist"
 
       - name: Verify deployment
         env:
@@ -184,26 +246,65 @@ jobs:
         run: |
           if [ -n "${DEPLOYMENT_URL:-}" ]; then
             echo "🔍 Verifying deployment at $DEPLOYMENT_URL"
-            # Simple HTTP check
-            if curl -f -s -o /dev/null "$DEPLOYMENT_URL"; then
-              echo "✅ Deployment verification successful"
-            else
-              echo "❌ Deployment verification failed"
-              exit 1
-            fi
+            
+            # Wait a moment for deployment to propagate
+            sleep 10
+            
+            # Check with retries
+            for i in {1..5}; do
+              if curl -f -s -o /dev/null -w "%{http_code}" "$DEPLOYMENT_URL" | grep -q "200"; then
+                echo "✅ Deployment verification successful (attempt $i)"
+                exit 0
+              else
+                echo "⏳ Verification attempt $i failed, retrying in 10s..."
+                sleep 10
+              fi
+            done
+            
+            echo "❌ Deployment verification failed after 5 attempts"
+            exit 1
           else
             echo "ℹ️ No DEPLOYMENT_URL configured, skipping verification"
           fi
 
       - name: Rollback on failure
         if: failure()
+        env:
+          SFTP_HOST: ${{ secrets.FTP_SERVER }}
+          SFTP_USER: ${{ secrets.FTP_USERNAME }}
+          REMOTE_DIR: ${{ secrets.FTP_PUBLIC_DIR }}
+          BACKUP_DIR: ${{ secrets.FTP_BACKUP_DIR }}
+          TIMESTAMP: ${{ needs.build.outputs.timestamp }}
         run: |
-          echo "❌ Deployment failed"
-          echo "💡 Consider implementing a rollback strategy:"
-          echo "   1. Keep previous build artifacts"
-          echo "   2. Use FTP snapshots if available"
-          echo "   3. Implement database backups if needed"
-          echo "   4. Set up monitoring and alerts"
+          echo "❌ Deployment failed, attempting rollback..."
+
+          # Get the most recent backup (excluding the one we just created)
+          LATEST_BACKUP=$(sftp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SFTP_USER@$SFTP_HOST" << SFTP_EOF | grep "backup_" | grep -v "$TIMESTAMP" | sort | tail -n1 | awk '{print $9}'
+          cd $BACKUP_DIR
+          ls -1 backup_*
+          quit
+          SFTP_EOF
+          )
+
+          if [ -n "$LATEST_BACKUP" ]; then
+            echo "📦 Rolling back to: $LATEST_BACKUP"
+            
+            sftp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SFTP_USER@$SFTP_HOST" << SFTP_EOF
+            get -r $BACKUP_DIR/$LATEST_BACKUP/* $REMOTE_DIR/
+            quit
+          SFTP_EOF
+            
+            echo "✅ Rollback completed"
+          else
+            echo "❌ No backup found for rollback"
+            exit 1
+          fi
+
+      - name: Cleanup old artifacts
+        if: success()
+        run: |
+          echo "🧹 Cleaning up GitHub artifacts..."
+          # The artifact will be automatically cleaned up based on retention-days setting
 
   notify:
     runs-on: ubuntu-latest
@@ -213,7 +314,11 @@ jobs:
       - name: Notify deployment status
         run: |
           if [ "${{ needs.deploy.result }}" = "success" ]; then
-            echo "🎉 ${{ needs.build.outputs.deployment-message }} - SUCCESS"
+            MESSAGE="🎉 ${{ needs.build.outputs.deployment-message }} - SUCCESS"
+            COLOR="good"
           else
-            echo "💥 Deployment failed - check logs for details"
+            MESSAGE="💥 Deployment failed - check logs for details"
+            COLOR="danger"
           fi
+
+          echo "$MESSAGE"
